--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+et-xmlfile==1.1.0
 Flask==3.0.3
 flatbuffers==24.3.25
 gast==0.4.0
@@ -24,12 +25,16 @@ Markdown==3.6
 MarkupSafe==2.1.5
 numpy==1.24.3
 oauthlib==3.2.2
+openpyxl==3.1.5
 opt-einsum==3.3.0
 packaging==24.1
+pandas==2.2.2
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
@@ -45,6 +50,7 @@ tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
 typing_extensions==4.5.0
+tzdata==2024.1
 urllib3==2.2.2
 Werkzeug==3.0.3
 wrapt==1.16.0
